--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "PRINXE-MD",
+  "name": "عامــــــر❥مــــــغل",
   "description": "PRINXE-MD A SUPER WHATSAPP USER BOT",
   "keywords": ["java", "bot", "whatsapp-bot", "whatsapp-automation"],
   "repository": "https://github.com/PRINCE-GDS/PRINXE-MD",
@@ -9,7 +9,7 @@
       "OWNERS": {
       "description": "Put your Number as Owner",
       "required": true,
-      "value": "923092668108;❣️Prince"
+      "value": "عامــــــر❥مــــــغل"
       },
      "MODE": {
       "description": "mode public or private",
@@ -54,7 +54,7 @@
     "PACK_NAME": {
       "description": "Put your stickers pack name",
       "required": false,
-      "value": "Prince🎗️❣️"
+      "value": "عامــــــر❥مــــــغل"
       },
     "DATABASE_URL": {
       "description": "Put your MongoDB here",
@@ -64,7 +64,7 @@
     "DL_MSG": {
       "description": "Video downloader caption",
       "required": true,
-      "value": "📥-------- *ᴘʀɪɴᴄᴇ-ᴍᴅ* --------📥"
+      "value": "📥-------- عامــــــر❥مــــــغل--------📥"
       },
     "STATUSVIEW": {
       "description": "Make it true if you want the bot to auto view status",
